--- a/TypescriptHtml/nbproject/project.properties
+++ b/TypescriptHtml/nbproject/project.properties
@@ -1,2 +1,13 @@
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterActiveProfile=
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterEnabled=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterLocation=
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.enableFormatAsSaveAction=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.linefeed=
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.preserveBreakPoints=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.SaveActionModifiedLinesOnly=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.showNotifications=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.sourcelevel=
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.useProjectPref=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.useProjectSettings=true
 javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
