--- a/TypescriptHtml/src/de/inetsource/Bundle.properties
+++ b/TypescriptHtml/src/de/inetsource/Bundle.properties
@@ -1,1 +1,5 @@
+OpenIDE-Module-Display-Category=HTML5
+OpenIDE-Module-Long-Description=\
+    Helps writing HTML Code with code completion for typescript.
 OpenIDE-Module-Name=TypescriptHtml
+OpenIDE-Module-Short-Description=Typescript Codecompletion
